[package]
name = "rustcon"
version = "0.1.0"
edition = "2018"

[dependencies]
array-bytes = { version = "1.5.1" }
bytes = { version= "1.1.0", features = ["serde"] }
clap = { version = "3.0.14", features = ["derive"] }
env_logger = { version = "0.9.0" }
log = { version = "0.4.17" }
rpassword = { version = "5.0" }