[package]
name = "rustcon"
version = "0.1.0"
rust-version = "1.65"
edition = "2018"
description = "A simple RCON client written in Rust"
license = "MIT"
keywords = ["rcon", "RCON"]
categories = ["command-line-utilities", "network-programming"]
homepage = "https://github.com/cblanken/rustcon"
repository = "https://github.com/cblanken/rustcon"
readme = "README.md"

[dependencies]
array-bytes = { version = "1.5.1" }
bytes = { version= "1.1.0", features = ["serde"] }
clap = { version = "3.0.14", features = ["derive"] }
env_logger = { version = "0.9.0" }
log = { version = "0.4.17" }
rpassword = { version = "5.0" }
